<resources>
    <string name="app_name">FinalProject</string>
    <string name="logo">logo</string>
    <string name="create_username">Create Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="android_mart">Android Mart</string>
    <string name="register">Register</string>
    <string name="loginWelcomePageButton">Login</string>
    <string name="registerWelcomePageButton">Register</string>
    <string name="menu_settings_field">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product</string>
    <string name="product_name">Product name</string>
    <string name="rating_bar">Rating</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="login">Login</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="add">add</string>
    <string name="addcart">AddCart</string>
</resources>