<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/logoTextImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/android_mart"
        app:layout_constraintEnd_toEndOf="@+id/logoImage"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/logoImage"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:srcCompat="@drawable/androidmarttext" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="16"
        android:hint="@string/create_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/logoTextImage"
        app:layout_constraintStart_toStartOf="@+id/logoTextImage"
        app:layout_constraintTop_toBottomOf="@+id/logoTextImage" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/usernameField"
        app:layout_constraintStart_toStartOf="@+id/usernameField"
        app:layout_constraintTop_toBottomOf="@+id/usernameField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/emailField"
        app:layout_constraintStart_toStartOf="@+id/emailField"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordConfirmField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintStart_toStartOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="115dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/passwordConfirmField"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmField"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmField" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>