<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/logoTextImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/android_mart"
        app:layout_constraintEnd_toEndOf="@+id/logoImage"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/logoImage"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        app:srcCompat="@drawable/androidmarttext" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="16"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/logoTextImage"
        app:layout_constraintStart_toStartOf="@+id/logoTextImage"
        app:layout_constraintTop_toBottomOf="@+id/logoTextImage" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="16"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/usernameField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameField"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="158dp"
        android:layout_height="80dp"
        android:layout_marginTop="84dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/passwordField"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

</androidx.constraintlayout.widget.ConstraintLayout>